# N1KK3

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: components.rs  game.rs  mod.rs  paths.rs  restart.rs  runner.rs
src-tauri/src/download/: client.rs  extract.rs  mod.rs
src-tauri/src/setup/: mod.rs
src-tauri/src/wine/: prefix.rs
